# Dan-Development-and-Automation-Network

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AUTHENTICATION_SYSTEM.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DAN_SECURITY_ANALYSIS_FINAL.md  Dan.py  INSTALL.md  LICENSE  ONBOARDING.md  PERFORMANCE_OPTIMIZATIONS_COMPLETE.md  PROJECT_INTEGRITY.md  README.md  RELEASE.md  ROADMAP.md  SELF_ANALYSIS_SUMMARY.md  TOOL_REGISTRY_ANALYSIS.md  USER_CREATION_GUIDE.md  agent.py  api_config.py  auth_data.json  auth_system.py  auth_tools.py  code_execution.py  code_tools.py  codebase_index.py  config.py  context_mgr.py  cost_tracker.py  dan_gui.py  dan_gui_components.py  dan_gui_controller.py  dan_gui_modern.py  dan_gui_support.py  dan_gui_theme.py  git_tools.py  gui_compat.py  (+30 more)
.github/: CODEOWNERS  dependabot.yml
Read/: Read.md
actions/: __init__.py
assets/: README.md
docs/: ARCHITECTURE.md  AUTHENTICATION_SYSTEM.md  SECURITY_BOUNDARIES.md
installer/: Dan.iss
knowledge/: __init__.py
scripts/: build_windows.py  release_artifacts.py  release_readiness.py  repo_health.py  scan_secrets.py  smoke_windows_cli.py  verify_windows_build.py  with_server.py
tests/: test_agent.py  test_api_config.py  test_build_windows.py  test_context_mgr.py  test_cost_tracker.py  test_dan.py  test_project_indexer_runtime.py  test_provider_common.py  test_providers.py  test_release_artifacts.py  test_release_readiness.py  test_release_workflow.py  test_repo_hygiene.py  test_security_utils.py  test_session_mgr.py  test_skills.py  test_smoke_windows_cli.py  test_startup_doctor.py  (+6 more)
(+7 files in other folders)
